First tries with classic npm module

--- a/src/app/demo/home/home.component.html
+++ b/src/app/demo/home/home.component.html
@@ -14,9 +14,9 @@
             <div class="console-button" (click)="getAll()">
                 <span>getAll()</span>
             </div>
-            <div class="console-button" (click)="getAllPrimitives()">
-                <span>getAllPrimitives()</span>
-            </div>
+<!--            <div class="console-button" (click)="getAllPrimitives()">-->
+<!--                <span>getAllPrimitives()</span>-->
+<!--            </div>-->
             <div class="console-button" (click)="getAllWithPagination()">
                 <span>getAllWithPagination()</span>
             </div>
