--- a/src/app/demo/home/home.component.html
+++ b/src/app/demo/home/home.component.html
@@ -14,6 +14,7 @@
             <div class="console-button" (click)="getAll()">
                 <span>getAll()</span>
             </div>
+            <lib-genese-angular-library></lib-genese-angular-library>
 <!--            <div class="console-button" (click)="getAllPrimitives()">-->
 <!--                <span>getAllPrimitives()</span>-->
 <!--            </div>-->
