--- a/src/app/demo/home/home.component.scss
+++ b/src/app/demo/home/home.component.scss
@@ -64,9 +64,11 @@
 
             .container-table {
                 width: 100%;
-                padding-left: 24px;
                 padding-right: 24px;
                 margin-top: 20px;
+                height: calc(100% - 300px);
+                overflow-y: auto;
+                overflow-x: hidden;
 
                 .table-tile {
                     display: flex;
@@ -107,6 +109,7 @@
                         .divIcons {
                             display: flex;
                             flex-direction: row;
+                            justify-content: center;
 
                             .buttons-icons {
                                 padding: 0 10px;
