BooksService getAll() runs

--- a/src/app/demo/home/update-custom/update-custom.component.html
+++ b/src/app/demo/home/update-custom/update-custom.component.html
@@ -5,7 +5,7 @@
     <p>However, the backend must wait a PUT http request.</p>
     <p>In this example, the updateCustom() method updates a book with the help of the NestJS backend.</p>
     <p>Open your navigator console. In the tab "Network", you'll find the data received from PUT request.</p>
-    <div class="dataList">
-        <app-data-list [data]="data" (delete)="updateCustom($event)"></app-data-list>
-    </div>
+<!--    <div class="dataList">-->
+<!--        <app-data-list [data]="data" (delete)="updateCustom($event)"></app-data-list>-->
+<!--    </div>-->
 </div>
